--- a/user-interface/kimai.ui
+++ b/user-interface/kimai.ui
@@ -8,18 +8,77 @@
     <property name="title">UI XML Test</property>
     <child>
       <object class="GtkBox">
+        <property name="halign">center</property>
+        <property name="homogeneous">True</property>
         <property name="margin-bottom">24</property>
         <property name="margin-end">24</property>
         <property name="margin-start">24</property>
         <property name="margin-top">24</property>
         <child>
-          <object class="GtkListBox" id="project_listbox">
-            <property name="halign">start</property>
+          <object class="GtkBox">
+            <property name="orientation">vertical</property>
+            <child>
+              <object class="GtkLabel">
+                <property name="label">Project</property>
+                <property name="margin-bottom">24</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkListBox" id="project_listbox">
+                <property name="halign">start</property>
+                <property name="show-separators">True</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkBox">
+                <property name="margin-top">24</property>
+                <child>
+                  <object class="GtkEntry" id="new_project_input">
+                    <property name="placeholder-text">New project</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkButton" id="new_project_button">
+                    <property name="label">Create</property>
+                    <property name="margin-start">12</property>
+                  </object>
+                </child>
+              </object>
+            </child>
           </object>
         </child>
         <child>
-          <object class="GtkListBox" id="activity_listbox">
-            <property name="margin-start">24</property>
+          <object class="GtkBox">
+            <property name="margin-start">48</property>
+            <property name="orientation">vertical</property>
+            <child>
+              <object class="GtkLabel">
+                <property name="label">Activity</property>
+                <property name="margin-bottom">24</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkListBox" id="activity_listbox">
+                <property name="margin-start">24</property>
+                <property name="show-separators">True</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkBox">
+                <property name="margin-top">24</property>
+                <child>
+                  <object class="GtkEntry" id="new_activity_input">
+                    <property name="placeholder-text">New activity</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkButton" id="new_activity_button">
+                    <property name="label">Create</property>
+                    <property name="margin-start">12</property>
+                  </object>
+                </child>
+              </object>
+            </child>
           </object>
         </child>
       </object>
